@startuml classes
!pragma useIntermediatePackages false

class classes.City.City {
  name: str
  c_transport: list[TrafficObject]
}
class classes.SystemSaver.SystemSaver.ISerializable {
}
class classes.TrafficObject.TrafficObject {
  __id: None
  capacity: None
  pollution: None
  speed: None
}
class classes.City.TransportListWrapper {
  root: City
  c_list: None
}
class classes.Controls.SensorObject.SensorObject {
  __id: None
}
class classes.Controls.Sensors.ElectricitySensor.ElectricitySensor {
  electricityFlow: float
  counter: None
}
class classes.Controls.Sensors.GasSensor.GasSensor {
  __pollution: float
  __vehicles: int
}
enum classes.Controls.Sensors.GasSensor.POLLUTION_LEVEL {
  HIGH: HIGH {static}
  AVERAGE: AVERAGE {static}
  LOW: LOW {static}
}
class classes.Controls.Sensors.TrafficControl.TrafficControl {
  __passengerFlow: None
}
class classes.Service.EnergyOptimisationService.EnergyOptimisationService {
  __sensor: ElectricitySensor
}
class classes.Service.Service.Service {
}
class classes.TrafficSystem.Car.Car {
  name: None
  manufacturer: None
}
class classes.TrafficSystem.PublicTransport.PublicTransport {
  name: None
  type: None
  route: None
}
class classes.SmartCity.SmartCity {
  c_sensors: None
}
class classes.Service.TrafficManager.TrafficManager {
  __city: SmartCity
  __trafficControl: TrafficControl
}
class classes.SmartCity.SensorDictWrapper {
  c_dict: dict
}
class classes.SystemSaver.SystemSaver.SystemSaver {
  __serializables: list[ISerializable]
}
class classes.main.Main {
  g_saver: None
  __data: None
  __city: None
  __trafficManager: None
  __energyOptimisation: None
}
classes.City.City *-- classes.TrafficObject.TrafficObject
classes.SystemSaver.SystemSaver.ISerializable <|-- classes.City.City
classes.SystemSaver.SystemSaver.ISerializable <|-- classes.TrafficObject.TrafficObject
classes.City.TransportListWrapper *-- classes.City.City
classes.SystemSaver.SystemSaver.ISerializable <|-- classes.Controls.SensorObject.SensorObject
classes.Controls.SensorObject.SensorObject <|-- classes.Controls.Sensors.ElectricitySensor.ElectricitySensor
classes.Controls.SensorObject.SensorObject <|-- classes.Controls.Sensors.GasSensor.GasSensor
classes.Controls.SensorObject.SensorObject <|-- classes.Controls.Sensors.TrafficControl.TrafficControl
classes.Service.EnergyOptimisationService.EnergyOptimisationService *-- classes.Controls.Sensors.ElectricitySensor.ElectricitySensor
classes.Service.Service.Service <|-- classes.Service.EnergyOptimisationService.EnergyOptimisationService
classes.TrafficObject.TrafficObject <|-- classes.TrafficSystem.Car.Car
classes.TrafficObject.TrafficObject <|-- classes.TrafficSystem.PublicTransport.PublicTransport
classes.City.City <|-- classes.SmartCity.SmartCity
classes.Service.TrafficManager.TrafficManager *-- classes.SmartCity.SmartCity
classes.Service.TrafficManager.TrafficManager *-- classes.Controls.Sensors.TrafficControl.TrafficControl
classes.Service.Service.Service <|-- classes.Service.TrafficManager.TrafficManager
classes.SystemSaver.SystemSaver.SystemSaver *-- classes.SystemSaver.SystemSaver.ISerializable
footer Generated by //py2puml//
@enduml

